# obzerver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  _config.yml  index.html  package.xml
_includes/: footer.html  head.html  sidebar.html
_layouts/: default.html
config/: kth.ini  pelican.ini  ucf_arg.ini
include/obzerver/: benchmarker.hpp  camera_tracker.hpp  ccv_wrapper.hpp  circular_buffer.hpp  common_types.hpp  fft.hpp  hungarian.hpp  kalman.hpp  logger.hpp  multi_object_tracker.hpp  object_tracker.hpp  periodicity_app.hpp  roi_extraction.hpp  self_similarity.hpp  tobject.hpp  utility.hpp
include/obzerver/opencv3-backport/: shift.hpp
public/css/: lazyYT-min.css  poole.css  simplegrid-min.css  simplegrid.css
public/js/: lazyYT-min.js
scripts/: analyze-perf-result.py  build-opencv.sh  myfft.m  perf-test.sh  run-dataset.sh  run-ucf-arg.sh
src/: benchmarker.cpp  camera_tracker.cpp  ccv_demo.cpp  ccv_wrapper.cpp  demo.cpp  fft.cpp  hungarian.cpp  kalman.cpp  logger.cpp  multi_object_tracker.cpp  object_tracker.cpp  periodicity_app.cpp  roi_extraction.cpp  self_similarity.cpp  tobject.cpp  utility.cpp
test/: CMakeLists.txt  test-cb.cpp
test/ucf_arg_aerial_waving_04_02/: README.md  res.png.txt
