<?xml version="1.0"?>
<package>
  <name>obzerver</name>
  <version>0.1.0</version>
  <description>Periodic Motion Obzerver</description>

  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <license>Apache 2</license>

  <!-- <url type="website">http://wiki.ros.org/obzerver_ros</url> -->

  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>

  <buildtool_depend>cmake</buildtool_depend>
  
  <build_depend>glog</build_depend>
  <build_depend>gsl</build_depend>
  <build_depend>opencv2</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>glog</run_depend>
  <run_depend>opencv2</run_depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
